--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <aside>
       <nav>
-        <img src="/Portfolio/images/pray.JPG" alt=" me with praying hands">
+        <img src="Portfolio/images/pray 2.JPG" alt=" me with praying hands">
           <a href = "#home"><i class= "material-icons md-36">home</i>
           <p>Home</p>
           </a>
