--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <aside>
       <nav>
-        <img src="Portfolio/images/pray 2.JPG" alt=" me with praying hands">
+        <img src="pray 2.jpg" alt=" me with praying hands">
           <a href = "#home"><i class= "material-icons md-36">home</i>
           <p>Home</p>
           </a>
@@ -33,7 +33,7 @@
           <header class="home" id="home"><br><br>
           <h1>Adonis Shropshire</h1>
           <h4>Software Developer</h4>
-          <img src = "Portfolio/images/pray 2.JPG" alt="me praying 2">
+          <img src = "pray 2.jpg" alt="me praying 2">
           </header>
           
       </main>
